finished raincloud graph

--- a/Plant Nutrition Analysis.Rmd
+++ b/Plant Nutrition Analysis.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Plant Nutrition Analysis"
 author: "Meghan Manhatton"
-date: "2023-04-07"
+date: "2023-04-16"
 output: 
   prettydoc::html_pretty:
     theme: leonids
@@ -16,6 +16,10 @@ output:
 # install.packages("report")
 # install.packages("ggpubr")
 # install.packages("car")
+# install.packages("ggdist")
+# install.packages("gghalves")
+# install.packages("colorspace")
+# install.packages("ggtext")
 library(here)
 library(readxl)
 library(ggplot2)
@@ -25,6 +29,10 @@ library(ggpubr)
 library(gridExtra)
 library("easystats")
 library("report")
+library(ggdist)
+library(gghalves)
+library(colorspace)
+library(ggtext)
 
 
 data <- read_xlsx(
@@ -38,14 +46,12 @@ dat <- data %>%
 
 spp <- unique(dat$Species)
 
-
 ```
 
-## These tabs contain the initial data analysis results: {.tabset}
 
-### Is the root:shoot data normal? And ANOVA report
+## Is the root to shoot ratio data normal? Is it significant? 
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 
 ##Is the data normal?
 
@@ -75,9 +81,11 @@ fun_shapiro <- for(i in 1:length(spp)){
 
 ```
 
-### Root:Shoot Correlations {.tabset}
+## Root to Shoot Correlations
+###Is the change in root to shoot ratio strongly driven by a change in the root mass or shoot mass?
 
-```{r, echo=FALSE}
+
+```{r, echo=FALSE, warning=FALSE}
 
 corrbase <- ggplot(dat, aes(x=`RootDryWeight`, y= `ShootDryWeight`, color=Rate)) +
       geom_point(size = 0.5) +
@@ -88,12 +96,11 @@ corrbase <- ggplot(dat, aes(x=`RootDryWeight`, y= `ShootDryWeight`, color=Rate))
 
 corrbase + facet_wrap(~Species, ncol = 2)
 
-
 ```
 
 ###
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE, results='hide'}
 
 fun_box <- for(i in 1:length(spp)){
   
@@ -107,32 +114,128 @@ boxbase <- ggplot(boxdat, aes(y = dryroottoshoot, x= Rate, fill = Rate))+
   ylab('Root to Shoot Ratio') +
   ggtitle(paste0(sp)) +
   scale_fill_discrete(name = "Osmocote Rates")+
-  geom_jitter(aes(col = Rate), size= 1.5, alpha=0.9, width = 0.2) #+
-  #scale_x_discrete(breaks = c('Asclepiastuberosa', 'Lespedeza'),
-  #                 labels = c("ASTU", "LECA"))
-
+  geom_jitter(aes(col = Rate), size= 1.5, alpha=0.9, width = 0.2) 
 print(boxbase)
 
 
 }
 
-
-boxbase <- ggplot(dat, aes(y = dryroottoshoot, x= Rate, fill = Rate))+
-  geom_boxplot() +
-  ylab('Root to Shoot Ratio') +
-  ggtitle("Root to Shoot Ratios") +
-  scale_fill_discrete(name = "Osmocote Rates")#+
-  #geom_jitter(aes(col = Rate), size= 1.5, alpha=0.9, width = 0.2) #+
-  #scale_x_discrete(breaks = c('Asclepiastuberosa', 'Lespedeza'),
-  #                 labels = c("ASTU", "LECA"))
-
-boxbase + facet_wrap(~Species, ncol = 2)
-
 ```
 
+##
 
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
+```{r, echo=FALSE, warning=FALSE}
+pal <- c("#FF8C00", "#A034F0", "#159090")
 
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Ctrl+Shift+K* to preview the HTML file).
+add_sample <- function(x){
+   return(c(y = max(x) + .025, 
+            label = length(x)))
+}
 
-The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
+fun_rain <- for(i in 1:length(spp)){
+  
+  sp <- assign(paste0("",i), spp[[i]])
+  
+  raindat <- filter(dat, Species == sp) 
+  
+rain <- ggplot(raindat, aes(y = dryroottoshoot, x= Rate, fill = Rate))+
+  stat_halfeye(
+    aes(color = Rate,
+        fill = after_scale(lighten(color, .5))),
+    adjust = .5,
+    .width = 0,
+    width = .6,
+    justification = -.3,
+    point_color = NA
+  ) +
+  geom_boxplot(
+    aes(color = Rate,
+        color = after_scale(darken(color, .1, space = "HLS")),
+        fill = after_scale(desaturate(lighten(color, .8), .4))),
+     width = .095,
+    outlier.shape = NA
+  ) +
+  geom_point(
+    aes(color = Rate,
+        color = after_scale(darken(color, .1, space = "HLS"))),
+    fill = "white",
+    shape = 21,
+    stroke = .4,
+    size = 2,
+    position = position_jitter(seed = 1, width = .12)
+  ) +
+  geom_point(
+    aes(fill = Rate),
+    color = "transparent",
+    shape = 21,
+    stroke = .4,
+    size = 2,
+    alpha = .3,
+    position = position_jitter(seed = 1, width = .12)
+  ) +
+   stat_summary(
+    geom = "text",
+    fun = "median",
+    aes(label = round(..y.., 2),
+        color = Rate,
+        color = after_scale(darken(color, .1, space = "HLS"))),
+    family = "Roboto Condensed",
+    fontface = "bold",
+    size = 4.5,
+    vjust = -3.5
+  ) +
+ stat_summary(
+    geom = "text",
+    fun.data = add_sample,
+    aes(label = paste("n =", ..label..),
+        color = Rate,
+        color = after_scale(darken(color, .1, space = "HLS"))),
+    family = "Roboto Condensed",
+    size = 4,
+    hjust = 0
+  ) +
+ coord_flip() +
+  #annotation_custom(pic, ymin = 2.9, ymax = 3.85, xmin = 2.7, xmax = 4.7) #+
+  scale_y_continuous(
+   # limits = c(0, 2.6),
+   # breaks = seq(0.4, 2.4, by = .2)
+   # expand = c(.001, .001)
+ )+
+  scale_color_manual(values = pal, guide = "none") +
+  scale_fill_manual(values = pal, guide = "none") +
+  labs(
+    y = "Root to Shoot Ratio",
+    title = "Root to Shoot Ratios for High and Low Osmocote Rates",
+    subtitle = (paste0("", sp)),
+    caption = "Meghan Manhatton, April 2023"
+  ) +
+  theme_minimal(base_family = "leonids", base_size = 12) +
+  theme(
+    panel.grid.minor = element_blank(),
+    panel.grid.major.y = element_blank(),
+    axis.ticks = element_blank(),
+    axis.text.x = element_text(family = "Roboto"),
+    axis.text.y = element_text(
+      color = rev(darken(pal, .1, space = "HLS")), 
+      size = 14
+    ),
+    axis.title.x = element_text(margin = margin(t = 10),
+                                size = 12),
+    plot.title = element_markdown(face = "bold", size = 13),
+    plot.subtitle = element_text(
+      color = "grey40", hjust = 0,
+      margin = margin(0, 0, 20, 0)
+    ),
+    plot.title.position = "plot",
+    plot.caption = element_markdown(
+      color = "grey40", lineheight = 1.2,
+      margin = margin(20, 0, 0, 0)),
+    plot.margin = margin(15, 15, 10, 15)
+  )
+ 
+ 
+print(rain)
+
+}
+
+```
