somewhat fixed the charts running off the right side

--- a/Plant Nutrition Analysis.Rmd
+++ b/Plant Nutrition Analysis.Rmd
@@ -42,87 +42,14 @@ data <- read_xlsx(
 dat <- data %>%  
   replace(is.na(.), 0) %>%
   mutate(wetroottoshoot = RootWetWeight / ShootWetWeight) %>%
-  mutate(dryroottoshoot = RootDryWeight / ShootDryWeight)
+  mutate(dryroottoshoot = RootDryWeight / ShootDryWeight) %>%
+  arrange(Species)
 
 spp <- unique(dat$Species)
 
 ```
 
-
-## Is the root to shoot ratio data normal? Is it significant? 
-
-```{r, echo=FALSE, warning=FALSE}
-
-##Is the data normal?
-
-fun_shapiro <- for(i in 1:length(spp)){
-  
-  sp <- assign(paste0("",i), spp[[i]])
-  
-  res_aov <- filter(dat, Species == sp) 
-     
-  res_aov1 <- (aov(dryroottoshoot ~ Rate,
-               data = res_aov))
-
-  par(mfrow = c(1,2))
-
-  hist(res_aov1$residuals,
-       ylab = "residuals",
-       main = paste0(sp," residuals"))
-
-  qqPlot(res_aov1$residuals,
-           id = FALSE
-          )
-
-  print(paste0(sp, ":"))
-  cat("Sample Size: " , nrow(res_aov), "\n") 
-  print(report(res_aov1))
-} 
-
-```
-
-## Root to Shoot Correlations
-###Is the change in root to shoot ratio strongly driven by a change in the root mass or shoot mass?
-
-
-```{r, echo=FALSE, warning=FALSE}
-
-corrbase <- ggplot(dat, aes(x=`RootDryWeight`, y= `ShootDryWeight`, color=Rate)) +
-      geom_point(size = 0.5) +
-      geom_smooth(method="lm", fill= NA)+
-      xlab("Root Dry Weight") +
-      ylab("Shoot Dry Weight") +
-      ggtitle("Root to Shoot Correlation Graphs")
-
-corrbase + facet_wrap(~Species, ncol = 2)
-
-```
-
-###
-
-```{r, echo=FALSE, warning=FALSE, results='hide'}
-
-fun_box <- for(i in 1:length(spp)){
-  
-  sp <- assign(paste0("",i), spp[[i]])
-  
-  boxdat <- filter(dat, Species == sp) 
-  
-boxbase <- ggplot(boxdat, aes(y = dryroottoshoot, x= Rate, fill = Rate))+
-  geom_boxplot() +
-  #xlab(paste0("",i)) +
-  ylab('Root to Shoot Ratio') +
-  ggtitle(paste0(sp)) +
-  scale_fill_discrete(name = "Osmocote Rates")+
-  geom_jitter(aes(col = Rate), size= 1.5, alpha=0.9, width = 0.2) 
-print(boxbase)
-
-
-}
-
-```
-
-##
+## How is the root to shoot ratio data distributed?
 
 ```{r, echo=FALSE, warning=FALSE}
 pal <- c("#FF8C00", "#A034F0", "#159090")
@@ -192,14 +119,15 @@ rain <- ggplot(raindat, aes(y = dryroottoshoot, x= Rate, fill = Rate))+
         color = after_scale(darken(color, .1, space = "HLS"))),
     family = "Roboto Condensed",
     size = 4,
-    hjust = 0
+    hjust = 5,
+    vjust = -1.5,
   ) +
  coord_flip() +
   #annotation_custom(pic, ymin = 2.9, ymax = 3.85, xmin = 2.7, xmax = 4.7) #+
   scale_y_continuous(
    # limits = c(0, 2.6),
    # breaks = seq(0.4, 2.4, by = .2)
-   # expand = c(.001, .001)
+   #expand_limits(y = c(0,6))
  )+
   scale_color_manual(values = pal, guide = "none") +
   scale_fill_manual(values = pal, guide = "none") +
@@ -239,3 +167,81 @@ print(rain)
 }
 
 ```
+
+
+## Shapiro Test and ANOVA Results
+### Is the root to shoot ratio data normal? Is the difference significant? 
+
+```{r, echo=FALSE, warning=FALSE}
+
+##Is the data normal?
+
+fun_shapiro <- for(i in 1:length(spp)){
+  
+  sp <- assign(paste0("",i), spp[[i]])
+  
+  res_aov <- filter(dat, Species == sp) 
+     
+  res_aov1 <- (aov(dryroottoshoot ~ Rate,
+               data = res_aov))
+
+  par(mfrow = c(1,2))
+
+  hist(res_aov1$residuals,
+       ylab = "residuals",
+       main = paste0(sp," residuals"))
+
+  qqPlot(res_aov1$residuals,
+           id = FALSE
+          )
+
+  print(paste0(sp, ":"))
+  cat("Sample Size: " , nrow(res_aov), "\n") 
+  print(report(res_aov1))
+} 
+
+```
+
+## Root to Shoot Correlations
+### Is the change in root to shoot ratio strongly driven by a change in the root mass or shoot mass?
+#### The charts below show the root mass on the x-axis and the shoot mass on the y-axis. If one or the other (root or shoot) were having an outsized effect on the ratio, I would expect the slope of the line to be different between the two treatments. They're remarkably similar with the exception of the high rate of Leca. 
+
+
+```{r, echo=FALSE, warning=FALSE}
+
+corrbase <- ggplot(dat, aes(x=`RootDryWeight`, y= `ShootDryWeight`, color=Rate)) +
+      geom_point(size = 0.5) +
+      geom_smooth(method="lm", fill= NA)+
+      xlab("Root Dry Weight") +
+      ylab("Shoot Dry Weight") +
+      ggtitle("Root to Shoot Correlation Graphs")
+
+corrbase + facet_wrap(~Species, ncol = 2)
+
+```
+
+
+
+```{r, echo=FALSE, warning=FALSE, results='hide'}
+
+# fun_box <- for(i in 1:length(spp)){
+#   
+#   sp <- assign(paste0("",i), spp[[i]])
+#   
+#   boxdat <- filter(dat, Species == sp) 
+#   
+# boxbase <- ggplot(boxdat, aes(y = dryroottoshoot, x= Rate, fill = Rate))+
+#   geom_boxplot() +
+#   #xlab(paste0("",i)) +
+#   ylab('Root to Shoot Ratio') +
+#   ggtitle(paste0(sp)) +
+#   scale_fill_discrete(name = "Osmocote Rates")+
+#   geom_jitter(aes(col = Rate), size= 1.5, alpha=0.9, width = 0.2) 
+# print(boxbase)
+# 
+# 
+# }
+
+```
+
+
